
[package]
name = "axum-app"
version = "0.3.5"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

# This is an example application that uses both rinja as template engine,
# and actix-web as your web-framework.
[dependencies]
axum = "0.8.1"
rinja = { version = "0.3.5", path = "../../rinja" }
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }

# These dependencies are simply used for a better user experience, having access logs in the
# console, and error messages if anything goes wrong, e.g. if the port is already in use.
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
pretty-error-debug = "0.3.0"
thiserror = "2.0.3"
tower-http = { version = "0.6.2", features = ["trace"] }

# In a real application you would not need this section. It is only used in here, so that this
# example can have a more lenient MSRV (minimum supported rust version) than rinja as a whole.
[workspace]
members = ["."]
